--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             </td> 
         </tr> 
       <td width=18% align="center"> 
-         <a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a> 
+         <a href="https://www.kuratorium.gda.pl/" target="strony">Kuratorium</a> 
          <br> 
          <a href="https://zse.edu.gdansk.pl/pl" target="strony">ZSE  Gdańsk</a> 
       </td> 
@@ -27,4 +27,5 @@
   </tr> 
 </table> 
 </body> 
+
 </html>
