--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       </td> 
       <td width=18% align="center"><a href="start.html" target="strony">Start</a> 
       </td> 
+      <td width=18% align="center"><a href="mapa.jpg" target="strony">mapa</a> 
+      </td>
 <tr> 
                
             </td> 
@@ -27,4 +29,5 @@
 </body> 
 
 </html>
+
 
