--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </td> 
       <td width=18% align="center"><a href="start.html" target="strony">Start</a> 
       </td> 
-      <td width=18% align="center"><a href="mapa.jpg" target="strony">mapa</a> 
+      </td> align="center"><a href="mapa.jpg" target="strony">mapa</a> 
       </td>
 <tr> 
                
@@ -29,5 +29,6 @@
 </body> 
 
 </html>
+
 
 
